--- a/maven/DevDemo/Jenkinsfile
+++ b/maven/DevDemo/Jenkinsfile
@@ -1,8 +1,4 @@
-#!/usr/bin/groovy
 
-/**
-    this section of the pipeline executes on the master, which has a lot of useful variables that we can leverage to configure our pipeline
-**/
 node (''){
     // these should align to the projects in the Application Inventory
     env.NAMESPACE = env.OPENSHIFT_BUILD_NAMESPACE.reverse().drop(6).reverse()
@@ -53,6 +49,9 @@ node (''){
     this section of the pipeline executes on a custom mvn build slave.
     you should not need to change anything below unless you need new stages or new integrations (e.g. Cucumber Reports or Sonar)
 **/
+
+nod
+
 node("${env.JENKINS_SLAVE_NAME}") {
 
   stage('SCM Checkout') {
@@ -80,6 +79,8 @@ node("${env.JENKINS_SLAVE_NAME}") {
 
   stage ('Deploy to Demo') {
     input "Promote Application to Demo?"
+
+
 
     openshiftTag (apiURL: "${env.OCP_API_SERVER}", authToken: "${env.OCP_TOKEN}", destStream: "${env.APP_NAME}", destTag: 'latest', destinationAuthToken: "${env.OCP_TOKEN}", destinationNamespace: "${env.DEMO_PROJECT}", namespace: "${env.DEV_PROJECT}", srcStream: "${env.APP_NAME}", srcTag: 'latest')
 
